# ibd

./: .gitignore  CLAUDE.md  PLAN.md  README.md  analyze.py  app.py  build.py  classify.py  derive.py  execute.py  find_errors.py  pyproject.toml
.agents/rules/: engineering-standards.md
.claude/: settings.local.json
.claude/commands/: check.md  run.md
.claude/memory/: account-ports.md  ibkr-pacing.md  state-model.md
config/: snp_config.yml
data/: backtest_results.pkl  df_cov.pkl  df_nkd.pkl  df_pf.pkl  df_protect.pkl  df_reap.pkl  df_unds.pkl  ohlc_symbols.json  option_orders.csv  screener_weekly.csv  symbol_overrides.json  symbols.pkl  yf_ticker_overrides.json
data/.claude/: settings.local.json
data/master/: flex_cash.pkl  flex_nav.pkl  flex_trades.pkl  ohlc.pkl  symbol_categories.pkl
docs/: flex_query_setup.md
memory/: project_flex_backtest.md
scripts/: benchmark_prices.py  check_weekly.py  diagnose_flex_api.py  llm_query_example.py  option_orders.py  option_strategy_screener.py  peek.py  probe_cid10.py  profile_hotpaths.py  run_backtest.py  test_deepseek.py  test_gemini.py  update_symbol_categories.py  update_trades.py
src/: _cli.py  analyze.py  build.py  classify.py  clear.py  derive.py  execute.py  fetch_ohlc.py  find_errors.py  log_utils.py
src/backtest/: greeks.py  score.py  strategy.py  synthetic.py
src/dashboard/: __init__.py  formatting.py  ib_client.py  ib_client.py.tmp.13896.1778466715068  ib_client.py.tmp.13896.1778466722630  ib_client.py.tmp.13896.1778466729071  llm_query.py  llm_query.py.tmp.18768.35599a00f8dc  llm_query.py.tmp.18768.8d86dd489336  llm_query.py.tmp.18768.fcd8fb5002e1  llm_query.py.tmp.20724.37ef7ea429dd  (+6 more)
tests/: conftest.py  test_build_validation.py  test_classify.py  test_ib_client.py  test_ingestion_pacing.py  test_integration.py  test_risk.py
web/: __init__.py  main.py  theme.py
z/: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
z/config/: nse_config.yml
z/scripts/: run_backtest.py  update_instruments.py  update_trades.py
z/src/nsewheel/: __init__.py  _cli.py  build.py  classify.py  config.py  derive.py  execute.py  formatting.py  greeks.py  history.py  instruments.py  ohlc.py  paths.py  settings.py  util.py
z/src/nsewheel/backtest/: __init__.py  score.py
z/src/nsewheel/broker/: __init__.py  kite_client.py  mock_data.py
z/tests/: conftest.py  test_classify.py  test_derive_lots.py  test_greeks.py  test_instruments.py
(+14 files in other folders)
