[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
ibd = "src._cli:main"

[project]
name = "ib"
version = "0.1.0"
description = "IB vibe programmed"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.28.0",
    "google-genai>=1.0.0",
    "basedpyright>=1.32.1",
    "black>=25.9.0",
    "from-root>=1.3.0",
    "ib-async>=2.0.1",
    "ibapi>=9.81.1.post1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.9",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "plotly>=6.7.0",
    "pydantic-settings>=2.14.0",
    "pykernel>=0.1.6",
    "pyprojroot>=0.3.0",
    "pyrefly>=0.64.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "ruff>=0.13.3",
    "scipy>=1.16.2",
    "streamlit>=1.57.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.66",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"

[tool.ruff]
line-length = 100

[tool.pyrefly]
infer-with-first-use = false
